corrected hompage responisiveness on mobile view

--- a/public/assets/css/templatemo-style.css
+++ b/public/assets/css/templatemo-style.css
@@ -14,7 +14,6 @@ body {
     padding-top: 70px;
 }
 
-
 /*---------------------------------------
      TYPOGRAPHY              
   -----------------------------------------*/
@@ -58,7 +57,6 @@ p {
     font-weight: normal;
     line-height: 24px;
 }
-
 
 /*---------------------------------------
      GENERAL               
@@ -184,7 +182,6 @@ section {
     height: 390px;
 }
 
-
 /*---------------------------------------
      BUTTONS               
   -----------------------------------------*/
@@ -205,7 +202,6 @@ section {
     border-color: transparent;
     color: #ffffff;
 }
-
 
 /*---------------------------------------
        PRE LOADER              
@@ -258,7 +254,6 @@ section {
         transform: rotate(360deg);
     }
 }
-
 
 /*---------------------------------------
       MENU              
@@ -334,8 +329,8 @@ section {
     padding-left: 22px;
 }
 
-.custom-navbar .navbar-nav>li>a:hover,
-.custom-navbar .navbar-nav>li>a:focus {
+.custom-navbar .navbar-nav > li > a:hover,
+.custom-navbar .navbar-nav > li > a:focus {
     background-color: transparent;
 }
 
@@ -344,7 +339,7 @@ section {
     color: #ffffff;
 }
 
-.custom-navbar .nav li.active>a {
+.custom-navbar .nav li.active > a {
     background-color: #29ca8e;
     color: #ffffff;
 }
@@ -362,7 +357,6 @@ section {
     background: #252525;
     border-color: transparent;
 }
-
 
 /*---------------------------------------
       HOME  & SLIDER            
@@ -429,7 +423,6 @@ section {
     background-image: url("/assets/images/slider-image3.jpg");
 }
 
-
 /*---------------------------------------
       FEATURE              
   -----------------------------------------*/
@@ -457,7 +450,6 @@ section {
     margin: 10px 0;
 }
 
-
 /*---------------------------------------
       ABOUT              
   -----------------------------------------*/
@@ -466,13 +458,19 @@ section {
     position: relative;
 }
 
-.button-edit>.button-edit-1 {
+.button-edit > .button-edit-1 {
     position: absolute;
     width: 20px;
     height: 20px;
     top: 150px;
     left: 200px;
     cursor: pointer;
+}
+@media only screen and (max-width: 992px) {
+    .button-edit > .button-edit-1 {
+        top: 170px;
+        left: 150px;
+    }
 }
 
 #about figure {
@@ -499,7 +497,6 @@ section {
     line-height: 50px;
     text-align: center;
 }
-
 
 /*---------------------------------------
       TEAM              
@@ -534,12 +531,11 @@ section {
     margin: 0;
 }
 
-
 /*---------------------------------------
       COURSES             
   -----------------------------------------*/
 
-.courses-text>h3 {
+.courses-text > h3 {
     margin-bottom: 20px;
 }
 
@@ -565,7 +561,7 @@ section {
     width: 100%;
 }
 
-.courses-item-1>span {
+.courses-item-1 > span {
     color: orange;
 }
 
@@ -591,9 +587,9 @@ section {
     margin-top: 24px;
 }
 
-.courses-section-3-wrapper {
-    /* background: red; */
-}
+/* .courses-section-3-wrapper {
+    background: red;
+} */
 
 .cs3-item1 {
     display: flex;
@@ -752,7 +748,6 @@ section {
     background: #033b4d;
 }
 
-
 /*---------------------------------------
      NEWS              
   -----------------------------------------*/
@@ -780,7 +775,6 @@ section {
     font-weight: bold;
 }
 
-
 /*---------------------------------------
       TESTIMONIAL             
   -----------------------------------------*/
@@ -798,7 +792,7 @@ section {
     width: 100%;
 }
 
-#testimonial .item>p {
+#testimonial .item > p {
     font-size: 16px;
     line-height: 26px;
 }
@@ -835,7 +829,6 @@ section {
     font-size: 14px;
 }
 
-
 /*---------------------------------------
       CONTACT             
   -----------------------------------------*/
@@ -852,7 +845,7 @@ section {
     padding-bottom: 20px;
 }
 
-#contact h2>small,
+#contact h2 > small,
 #contact p,
 #contact a {
     color: #f9f9f9;
@@ -880,7 +873,7 @@ section {
 
 #contact-form input[type="submit"] {
     border-radius: 5px;
-    padding: 2px!important;
+    padding: 2px !important;
     border: 1px solid transparent;
 }
 
@@ -889,7 +882,6 @@ section {
     border-color: #ffffff;
     color: #ffffff;
 }
-
 
 /*---------------------------------------
      FOOTER              
@@ -991,7 +983,6 @@ footer .social-icon {
     margin-top: 20px;
 }
 
-
 /*---------------------------------------
      SOCIAL ICON              
   -----------------------------------------*/
@@ -1026,7 +1017,6 @@ footer .social-icon {
     background: #29ca8e;
     color: #ffffff;
 }
-
 
 /*---------------------------------------
      RESPONSIVE STYLES              
